# desktop-app-blocker-api

./: Cargo.toml  README.md
src/: lib.rs  spec.rs
src/blocker/: app.rs  mod.rs  text.rs
src/platform/: mod.rs
src/platform/linux/: mod.rs
src/platform/macos/: mod.rs  plist.rs  processes.rs
src/platform/windows/: mod.rs  utils.rs
